--- a/package.json
+++ b/package.json
@@ -34,43 +34,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.11",
-    "@angular/common": "13.3.11",
-    "@angular/compiler": "13.3.11",
-    "@angular/core": "13.3.11",
-    "@angular/forms": "13.3.11",
-    "@angular/platform-browser": "13.3.11",
-    "@angular/platform-browser-dynamic": "13.3.11",
-    "@angular/platform-server": "13.3.11",
-    "@angular/router": "13.3.11",
+    "@angular/animations": "14.0.1",
+    "@angular/common": "14.0.1",
+    "@angular/compiler": "14.0.1",
+    "@angular/core": "14.0.1",
+    "@angular/forms": "14.0.1",
+    "@angular/platform-browser": "14.0.1",
+    "@angular/platform-browser-dynamic": "14.0.1",
+    "@angular/platform-server": "14.0.1",
+    "@angular/router": "14.0.1",
     "@nguniversal/express-engine": "^13.1.1",
     "@ngx-ssr/platform": "^1.1.1",
-    "@nrwl/angular": "13.10.5",
+    "@nrwl/angular": "14.2.4",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.7",
+    "@angular-devkit/build-angular": "14.0.1",
     "@angular-eslint/eslint-plugin": "13.2.1",
     "@angular-eslint/eslint-plugin-template": "13.2.1",
     "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "13.3.7",
-    "@angular/compiler-cli": "13.3.11",
-    "@angular/language-service": "13.3.11",
+    "@angular/cli": "~14.0.0",
+    "@angular/compiler-cli": "14.0.1",
+    "@angular/language-service": "14.0.1",
     "@commitlint/config-conventional": "^12.1.4",
     "@ng-builders/semrel": "^1.5.0",
     "@ng-web-apis/common": "^1.12.0",
     "@nguniversal/builders": "^13.1.1",
-    "@nrwl/cli": "13.10.5",
-    "@nrwl/cypress": "13.10.5",
-    "@nrwl/eslint-plugin-nx": "13.10.5",
-    "@nrwl/jest": "13.10.5",
-    "@nrwl/nx-cloud": "13.3.1",
-    "@nrwl/workspace": "13.10.5",
+    "@nrwl/cli": "14.2.4",
+    "@nrwl/cypress": "14.2.4",
+    "@nrwl/eslint-plugin-nx": "14.2.4",
+    "@nrwl/jest": "14.2.4",
+    "@nrwl/nx-cloud": "14.0.8",
+    "@nrwl/workspace": "14.2.4",
     "@types/express": "^4.17.0",
-    "@types/jest": "27.0.2",
+    "@types/jest": "27.4.1",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
@@ -82,20 +82,20 @@
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-cypress": "^2.12.1",
     "husky": "^4.3.8",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.1.1",
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.2",
     "lint-staged": "^10.5.4",
-    "ng-packagr": "13.3.1",
-    "nx": "13.10.5",
+    "ng-packagr": "14.0.1",
+    "nx": "14.2.4",
     "postcss": "^8.3.9",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-url": "^10.1.1",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "7.5.0",
+    "postcss-url": "10.1.3",
     "prettier": "2.6.2",
-    "ts-jest": "27.0.5",
-    "ts-node": "9.1.1",
+    "ts-jest": "27.1.4",
+    "ts-node": "10.8.1",
     "tslint": "6.1.3",
-    "typescript": "4.6.4"
+    "typescript": "4.7.3"
   },
   "husky": {
     "hooks": {
