--- a/libs/angular/package.json
+++ b/libs/angular/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0-development",
   "peerDependencies": {
     "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@ng-web-apis/common": "^1.12.0"
+    "@angular/core": "^14.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0",
+    "@ng-web-apis/common": "^1.12.0",
     "@micro-sentry/browser": "0.0.0-development"
   },
   "license": "Apache-2.0",
