--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,8 @@
 # ==================================================================================
-#                     @TinkoffCreditSystems/micro-sentry codeowners
+#                     @taiga-family/micro-sentry codeowners
 # ==================================================================================
 #  More info: https://help.github.com/articles/about-codeowners/
 #
 
-* @IKatsuba @MarsiBarsi
+* @MarsiBarsi
 # will be requested for review when someone opens a pull request
