--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,4 +35,4 @@ jobs:
         env:
           CI: true
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GH_TOKEN: ${{ secrets.TINKOFF_BOT_PAT }}
+          GH_TOKEN: ${{ secrets.TAIGA_FAMILY_BOT_PAT }}
