--- a/apps/docs/tsconfig.server.json
+++ b/apps/docs/tsconfig.server.json
@@ -2,8 +2,9 @@
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/server",
-    "target": "es2016",
-    "types": ["node"]
+    "target": "ES2022",
+    "types": ["node"],
+    "useDefineForClassFields": false
   },
   "files": ["src/main.server.ts", "server.ts"],
   "angularCompilerOptions": {
