--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "ng": "ng",
     "nx": "nx",
     "start": "nx serve",
-    "build": "nx affected --target build --configuration production --with-deps",
+    "build": "nx affected --target build --configuration production",
     "prerelease": "node scripts/prerelease",
     "release": "nx run-many --target release --all",
     "test": "nx affected --target test",
-    "lint": "nx workspace-lint && nx affected --target lint",
+    "lint": "nx affected --target lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -34,68 +34,69 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.1",
-    "@angular/common": "14.0.1",
-    "@angular/compiler": "14.0.1",
-    "@angular/core": "14.0.1",
-    "@angular/forms": "14.0.1",
-    "@angular/platform-browser": "14.0.1",
-    "@angular/platform-browser-dynamic": "14.0.1",
-    "@angular/platform-server": "14.0.1",
-    "@angular/router": "14.0.1",
-    "@nguniversal/express-engine": "^13.1.1",
-    "@ngx-ssr/platform": "^1.1.1",
-    "@nrwl/angular": "14.2.4",
-    "express": "^4.15.2",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "0.11.5"
+    "@angular/animations": "17.0.2",
+    "@angular/common": "17.0.2",
+    "@angular/compiler": "17.0.2",
+    "@angular/core": "17.0.2",
+    "@angular/forms": "17.0.2",
+    "@angular/platform-browser": "17.0.2",
+    "@angular/platform-browser-dynamic": "17.0.2",
+    "@angular/platform-server": "17.0.2",
+    "@angular/router": "17.0.2",
+    "@angular/ssr": "17.0.0",
+    "@ngx-ssr/platform": "1.2.1",
+    "@nx/angular": "17.1.2",
+    "express": "4.18.2",
+    "rxjs": "7.8.1",
+    "tslib": "2.6.2",
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.1",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "14.0.1",
-    "@angular/language-service": "14.0.1",
-    "@commitlint/config-conventional": "^12.1.4",
+    "@angular-devkit/build-angular": "17.0.0",
+    "@angular-devkit/core": "17.0.0",
+    "@angular-devkit/schematics": "17.0.0",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.2",
+    "@commitlint/config-conventional": "18.4.0",
     "@ng-builders/semrel": "^1.5.0",
-    "@ng-web-apis/common": "^1.12.0",
-    "@nguniversal/builders": "^13.1.1",
-    "@nrwl/cli": "14.2.4",
-    "@nrwl/cypress": "14.2.4",
-    "@nrwl/eslint-plugin-nx": "14.2.4",
-    "@nrwl/jest": "14.2.4",
-    "@nrwl/nx-cloud": "14.0.8",
-    "@nrwl/workspace": "14.2.4",
-    "@types/express": "^4.17.0",
-    "@types/jest": "27.4.1",
+    "@ng-web-apis/common": "3.0.6",
+    "@nx/cypress": "17.1.2",
+    "@nx/eslint": "17.1.2",
+    "@nx/eslint-plugin": "17.1.2",
+    "@nx/jest": "17.1.2",
+    "@nx/workspace": "17.1.2",
+    "@schematics/angular": "17.0.0",
+    "@types/express": "4.17.21",
+    "@types/jest": "29.4.4",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "6.11.0",
     "codelyzer": "^6.0.0",
-    "commitlint": "^12.0.1",
+    "commitlint": "18.4.1",
     "cypress": "^5.5.0",
     "dotenv": "10.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-plugin-cypress": "^2.12.1",
+    "eslint": "8.53.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "2.15.1",
     "husky": "^4.3.8",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.2",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.5.0",
+    "jest-preset-angular": "13.1.4",
     "lint-staged": "^10.5.4",
-    "ng-packagr": "14.0.1",
-    "nx": "14.2.4",
+    "ng-packagr": "17.0.0",
+    "nx": "17.1.2",
     "postcss": "^8.3.9",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
     "postcss-url": "10.1.3",
     "prettier": "2.6.2",
-    "ts-jest": "27.1.4",
-    "ts-node": "10.8.1",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
     "tslint": "6.1.3",
-    "typescript": "4.7.3"
+    "typescript": "5.2.2"
   },
   "husky": {
     "hooks": {
