--- a/libs/angular/project.json
+++ b/libs/angular/project.json
@@ -53,7 +53,7 @@
       }
     },
     "release": {
-      "executor": "@nx/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "commands": [
           "nx build angular --configuration production",
