--- a/libs/angular/package.json
+++ b/libs/angular/package.json
@@ -2,8 +2,8 @@
   "name": "@micro-sentry/angular",
   "version": "0.0.0-development",
   "peerDependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0"
+    "@angular/common": ">=14.0.0",
+    "@angular/core": ">=14.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0",
