Revert "fix(breadcrumb-plugin): loosen browser client peerDep (#10)"
This reverts commit 2e018b034806f73a0774631f8aad63090efd7da3.

--- a/libs/breadcrumb-plugin/package.json
+++ b/libs/breadcrumb-plugin/package.json
@@ -5,7 +5,7 @@
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@micro-sentry/browser": "^0.0.0-development"
+    "@micro-sentry/browser": "0.0.0-development"
   },
   "license": "Apache-2.0",
   "keywords": [
